--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <title>nikmors</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
