--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
   <title>nikmors</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-</head>
-<body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script>
+    Telegram.WebApp.ready();
+    Telegram.WebApp.expand();
+    Telegram.WebApp.enableClosingConfirmation();
+  </script>
+
+  </head>
+  <body>
+    <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
